<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".fragment.SettingFragment">

    <androidx.appcompat.widget.Toolbar
        android:layout_width="match_parent"
        android:layout_height="?actionBarSize"
        android:background="@color/colorPrimaryDark"
        android:elevation="2dp"
        app:title="@string/title_setting"
        app:titleTextColor="@color/white" />

    <LinearLayout
        android:layout_marginTop="30dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical">

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/civ_avatar"
            android:layout_marginStart="20dp"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:src="@drawable/ic_person"
            app:civ_border_color="@color/colorPrimaryDark"
            app:civ_border_width="1dp" />

        <LinearLayout
            android:layout_marginStart="12dp"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/lbl_name"
                style="@style/lbl.black"
                android:textSize="18sp"
                android:textStyle="bold"
                android:text="@string/sample_name"/>

            <TextView
                android:id="@+id/lbl_phone"
                android:layout_marginTop="4dp"
                style="@style/lbl.black"
                android:text="@string/sample_phone"/>

            <TextView
                android:id="@+id/lbl_regdate"
                style="@style/lbl.black"
                android:text="@string/sample_time"/>
        </LinearLayout>

        <ImageView
            android:id="@+id/img_edit"
            android:layout_marginEnd="20dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_edit" />
    </LinearLayout>

    <LinearLayout
        android:layout_marginTop="32dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical">

        <ImageView
            android:id="@+id/img_member"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:src="@drawable/ic_free_user" />

        <LinearLayout
            android:layout_marginStart="12dp"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/lbl_member"
                style="@style/lbl.black"
                android:text="@string/expire_free_member"
                android:textSize="16sp"
                android:textStyle="bold"/>

            <TextView
                android:id="@+id/lbl_expire"
                style="@style/lbl.black"
                android:text="@string/sample_time"/>
        </LinearLayout>

        <Button
            android:id="@+id/btn_upgrade"
            android:layout_marginEnd="4dp"
            android:layout_width="wrap_content"
            android:layout_height="35dp"
            android:background="@drawable/back_btn_invite"
            android:text="@string/upgrade"
            android:textSize="12sp"
            android:textColor="@color/colorPrimary"/>
    </LinearLayout>

    <Button
        android:id="@+id/btn_bluetooth"
        style="@style/btn.blue"
        android:layout_marginTop="32dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:textSize="16sp"
        android:text="@string/tracking"/>

    <Button
        android:id="@+id/btn_notification"
        style="@style/btn.blue"
        android:layout_marginTop="12dp"
        android:layout_marginBottom="12dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:textSize="16sp"
        android:text="@string/notification"/>

    <Button
        android:id="@+id/btn_rate"
        style="@style/btn.blue"
        android:layout_marginTop="32dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:textSize="16sp"
        android:text="@string/rating_app"/>

    <Button
        android:id="@+id/btn_share"
        style="@style/btn.blue"
        android:layout_marginTop="12dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:textSize="16sp"
        android:text="@string/share_app"/>

    <Button
        android:id="@+id/btn_privacy"
        style="@style/btn.blue"
        android:layout_marginTop="12dp"
        android:layout_marginBottom="12dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:textSize="16sp"
        android:text="@string/privacy_and_policy"/>

    <View
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_weight="1" />

    <Button
        android:id="@+id/btn_logout"
        style="@style/btn.red"
        android:layout_marginBottom="30dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:textSize="16sp"
        android:text="@string/logout"/>
</LinearLayout>