<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/contain"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    tools:context=".activity.RegisterActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/colorPrimary"
        app:title="Register"
        app:titleTextColor="@color/white"
        app:navigationIcon="@drawable/ic_arrow_left" />

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/civ_avatar"
        android:layout_marginTop="30dp"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:src="@mipmap/ic_launcher" />

    <com.laodev.socialdis.ui.CustomEditText
        android:id="@+id/cet_name"
        android:layout_marginTop="24dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:srcLeft="@drawable/ic_person"
        app:isccp="false"
        app:hint="@string/sample_name"/>

    <com.laodev.socialdis.ui.CustomEditText
        android:id="@+id/cet_email"
        android:layout_marginTop="12dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:srcLeft="@android:drawable/ic_dialog_email"
        app:isccp="false"
        app:hint="@string/normal_email"
        app:inputType="Email"/>

    <com.laodev.socialdis.ui.CustomEditText
        android:id="@+id/cet_phone"
        android:layout_marginTop="12dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:srcLeft="@drawable/ic_phone"
        app:isccp="true"
        app:hint="@string/normal_phone"
        app:inputType="Phone"/>

    <com.laodev.socialdis.ui.CustomEditText
        android:id="@+id/cet_pass"
        android:layout_marginTop="20dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:srcLeft="@android:drawable/ic_lock_idle_lock"
        app:isccp="false"
        app:hint="@string/normal_pass"
        app:inputType="Pass"/>

    <com.laodev.socialdis.ui.CustomEditText
        android:id="@+id/cet_repass"
        android:layout_marginTop="20dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:srcLeft="@android:drawable/ic_lock_idle_lock"
        app:isccp="false"
        app:hint="Confirm Password"
        app:inputType="Pass"/>

    <Button
        style="@style/btn.white"
        android:layout_marginTop="32dp"
        android:layout_marginBottom="12dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:text="@string/register"
        android:onClick="onClickRegisterBtn"/>

    <View
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1" />

    <TextView
        android:layout_marginBottom="12dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/goto_login"
        android:onClick="onClickLoginLbl"/>

</LinearLayout>