<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/contain"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    tools:context=".activity.DeviceChangeActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/colorPrimary"
        app:title="Change Device"
        app:titleTextColor="@color/white"
        app:navigationIcon="@drawable/ic_arrow_left" />

    <TextView
        style="@style/lbl.black"
        android:layout_marginTop="24dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:text="@string/change_detail"
        android:textSize="16sp"
        android:textStyle="bold"
        android:textAlignment="center"/>

    <com.laodev.socialdis.ui.CustomEditText
        android:id="@+id/cet_email"
        android:layout_marginTop="24dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:srcLeft="@android:drawable/ic_dialog_email"
        app:isccp="false"
        app:hint="@string/normal_email"
        app:inputType="Email"/>

    <com.laodev.socialdis.ui.CustomEditText
        android:id="@+id/cet_pass"
        android:layout_marginTop="20dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:srcLeft="@android:drawable/ic_lock_idle_lock"
        app:isccp="false"
        app:hint="@string/normal_pass"
        app:inputType="Pass"/>

    <androidx.cardview.widget.CardView
        android:layout_marginTop="20dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardCornerRadius="12dp">

        <LinearLayout
            android:padding="12dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/txt_reason"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_change_device"
                android:lines="8"
                android:gravity="start"
                android:background="@null"
                android:textSize="14sp"/>
        </LinearLayout>
    </androidx.cardview.widget.CardView>

    <Button
        style="@style/btn.white"
        android:layout_marginTop="32dp"
        android:layout_marginBottom="12dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:text="@string/change_device"
        android:onClick="onClickChangeBtn"/>

</LinearLayout>